crates/ir/tests/snapshots/lower_test__own_if_mixed_join.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_if_mixed_join

fn test(v0: ~String, v1: String) -> String =
  switch true {
    1 ->
      v0
    _ ->
      v1
  }
