crates/ir/tests/snapshots/lower_test__own_param_arithmetic_no_leak.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_param_arithmetic_no_leak

type Option[e] = Some#0(a) | None#1
type List[f] = Cons#0(b, List[b]) | Nil#1
type Result[g, h] = Ok#0(d) | Err#1(c)
type Ordering = LT#0 | EQ#1 | GT#2

fn f0 double(v0: Int) -> Int =
  let v1: Int = mul_int(v0, 2)
  v1
