crates/ir/tests/snapshots/lower_test__own_param_binop_with_literal.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_param_binop_with_literal

type Ordering = LT#0 | EQ#1 | GT#2
type Result[e, f] = Ok#0(b) | Err#1(a)
type List[g] = Cons#0(c, List[c]) | Nil#1
type Option[h] = Some#0(d) | None#1

fn f0 add_one(v0: Int) -> Int =
  let v1: Int = add_int(v0, 1)
  v1
