crates/ir/tests/snapshots/lower_test__own_recursive_accumulator.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_recursive_accumulator

fn sum_to(v0: Int, v1: Int) -> Int =
  let v2: Bool = eq_int(v0, 0)
  switch v2 {
    1 ->
      v1
    _ ->
      let v3: Int = sub_int(v0, 1)
      let v4: Int = add_int(v1, v0)
      let v5: Int = call sum_to(v3, v4)
      v5
  }
