crates/ir/tests/snapshots/lower_test__own_unused.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_unused

fn good(v0: ~String) -> Int =
  42
