crates/ir/tests/snapshots/lower_test__own_valid_let_annotation.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_valid_let_annotation

type Result[f, e] = Ok#0(b) | Err#1(a)
type Option[g] = Some#0(c) | None#1
type List[h] = Cons#0(d, List[d]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2

fn f0 test() -> String =
  let_join v1(v0: ~String) =
    v0
  in
  jump v1("hello")
