crates/ir/tests/snapshots/lower_test__own_valid_literal_to_own.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_valid_literal_to_own

struct Box { value: Int }

fn consume(v0: ~Int) -> Int =
  v0

fn consume_box(v1: ~Box) -> Box =
  v1

fn test_lit() -> Int =
  let v2: Int = call consume(42)
  v2

fn test_ctor() -> Box =
  let v3: ~Box = construct Box(1)
  let v4: Box = call consume_box(v3)
  v4
