crates/ir/tests/snapshots/lower_test__own_valid_own_to_own.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_valid_own_to_own

type Result[e, f] = Ok#0(b) | Err#1(a)
type Option[g] = Some#0(c) | None#1
type List[h] = Cons#0(d, List[d]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2

fn f0 consume(v0: ~String) -> String =
  v0

fn f1 test(v1: ~String) -> String =
  let v2: String = call f0(v1)
  v2
