crates/ir/tests/snapshots/lower_test__partial_apply_non_last.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module partial_apply_non_last

struct Predicate[g, h] { check: (a) -> b }
