crates/ir/tests/snapshots/lower_test__partial_apply_result.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module partial_apply_result

type Result[f, e] = Ok#0(b) | Err#1(a)
